Embed ramp4 and ramp3 into home and demo pages

--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,8 @@
         <link rel="stylesheet" href="<%= BASE_URL %>draw.css" />
         <script src="<%= BASE_URL %>draw.js"></script>
 
+        <link rel="stylesheet" href="<%= BASE_URL %>styles/ramp.css" />
+
         <script
             type="text/javascript"
             src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_39/cdts/compiled/wet-en.js"
@@ -43,6 +45,10 @@
         <script
             type="text/javascript"
             src="<%= BASE_URL %>js/rv-main.js"
+        ></script>
+        <script 
+            type="text/javascript"
+            src="<%= BASE_URL %>js/ramp.js"
         ></script>
     </body>
 </html>
